re(css):ensure that image modal margins are even this commit aligns with design best practices by ensuring that image modal margins are even to the eye this commit also removes the border around images for a smoother look

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -203,13 +203,14 @@ body {
 }
 
 .software-project-image {
-  border: 0.02em solid var(--primary-text); 
+  /* border: 0.02em solid var(--primary-text);  */
 }
 
 .image-modal-actions {
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
+  margin-bottom: 0.5rem;
   width: 100%;
 }
 
